--- a/0x00-Webpack/task_2/css/main.css
+++ b/0x00-Webpack/task_2/css/main.css
@@ -1,7 +1,7 @@
 #count {
-  font-weight: bold;
-  position: absolute;
-  right: 0;
+    display: inline;
+    font-weight: bold;
+    margin: 0;
 }
 
 #logo {
